--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
     block content
+    script(src='https://code.jquery.com/jquery-2.1.0.min.js')
+    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(src='/js/base64.js')
+    script(src='/js/underscore.js')
+    script(src='/js/github.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular.min.js')
+    footer scripts
