--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app)
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -12,4 +12,4 @@ html
     script(src='/js/underscore.js')
     script(src='/js/github.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular.min.js')
-    footer scripts
+    block scripts
