--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,55 @@
 extends layout
 
 block content
-  h1 Code Camp 2014 SideCase!
-  p Welcome to the code camp sidecase site. This site is here to help you find a team to work with.
-    Have a look at the project below and if any of them seem to interest you then click join!
+    .registration-form-section
+        form
+            .section-title.reg-header.animated.fadeInDown
+                h3 Get your Account Here
+            .clearfix
+               .col-sm-6.registration-left-section.animated.fadeInUp
+                    .reg-content
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon
+                                    i.icon-user.icon-color
+                                input.form-control                               
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon 
+                                    i.icon-user.icon-color
+                                input.form-control
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon 
+                                    i.icon-envelope.icon-color
+                                input.form-control
+                .col-sm-6.registration-right-section.animated.fadeInUp
+                    .reg-content
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon 
+                                    i.icon-user.icon-color
+                                input.form-control
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon 
+                                    i.icon-key.icon-color
+                                input.form-control
+                        .textbox-wrap
+                            .input-group
+                                span.input-group-addon 
+                                    i.icon-key.icon-color
+                                input.form-control
+
+
+            .registration-form-action.clearfix.animated.fadeInUp
+                a.btn.btn-success.pull-left.blue-btn(href='#')
+                    i.icon-chevron-left 
+                    &nbsp; &nbsp; Back To Login
+                button.btn.btn-success.pull-right.green-btn(type='submit')
+                    Register Now &nbsp; 
+                    i.icon-chevron-right
+
   div(ng-controller="SidecaseCtrl")
     ul
       li(ng-repeat="project in projects")
