--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,12 +4,22 @@ html(ng-app)
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-  body
-    block content
+    link(rel='stylesheet', href='/stylesheets/forms.css')
+    script(src='/js/modernizr.js')
+    link(rel='stylesheet', href='/stylesheets/animate.min.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,300', type='text/css')
+  body(style="background-color: grey")
+    .container.eternity-form
+      block content
     script(src='https://code.jquery.com/jquery-2.1.0.min.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/js/base64.js')
     script(src='/js/underscore.js')
     script(src='/js/github.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular.min.js')
+    script(src='/js/jquery.icheck.min.js')
+    script(src='/js/placeholders.min.js')
+    script(src='/js/respond.min.js')
     block scripts
+    script(src='/js/styling.js')
