--- a/views/index.jade
+++ b/views/index.jade
@@ -4,56 +4,26 @@ block content
     .registration-form-section
         form
             .section-title.reg-header.animated.fadeInDown
-                h3 Get your Account Here
-            .clearfix
-               .col-sm-6.registration-left-section.animated.fadeInUp
-                    .reg-content
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon
-                                    i.icon-user.icon-color
-                                input.form-control                               
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon 
-                                    i.icon-user.icon-color
-                                input.form-control
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon 
-                                    i.icon-envelope.icon-color
-                                input.form-control
-                .col-sm-6.registration-right-section.animated.fadeInUp
-                    .reg-content
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon 
-                                    i.icon-user.icon-color
-                                input.form-control
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon 
-                                    i.icon-key.icon-color
-                                input.form-control
-                        .textbox-wrap
-                            .input-group
-                                span.input-group-addon 
-                                    i.icon-key.icon-color
-                                input.form-control
-
-
+                h3 Welcome to the Code Camp 2014 Side Projectathon
             .registration-form-action.clearfix.animated.fadeInUp
-                a.btn.btn-success.pull-left.blue-btn(href='#')
-                    i.icon-chevron-left 
-                    &nbsp; &nbsp; Back To Login
+                p.pull-left
+                    i.icon-chevron-down
+                    &nbsp; &nbsp; Take a look at some of the projects 
+                    strong
+                        |or......
                 button.btn.btn-success.pull-right.green-btn(type='submit')
-                    Register Now &nbsp; 
-                    i.icon-chevron-right
+                    |Add your project &nbsp; 
+                    i.icon-github
+            .clearfix
+               .col-sm-12.registration-left-section.animated.fadeInUp
+                    .reg-content
+                      div(ng-controller="SidecaseCtrl")
+                        ul
+                          li(ng-repeat="project in projects")
+                            span {{project.name}}
+            
 
-  div(ng-controller="SidecaseCtrl")
-    ul
-      li(ng-repeat="project in projects")
-        span {{project.name}}
+
 
 block scripts
   script(src='/js/home.js')
