--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,25 +1,25 @@
 doctype html
 html(ng-app)
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+  head   
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/forms.css')
     script(src='/js/modernizr.js')
     link(rel='stylesheet', href='/stylesheets/animate.min.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,300', type='text/css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://code.jquery.com/jquery-2.1.0.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular.min.js')
+    block scriptshead
   body.colorBg
     .container.eternity-form
       block content
-    script(src='https://code.jquery.com/jquery-2.1.0.min.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/js/base64.js')
     script(src='/js/underscore.js')
     script(src='/js/github.js')
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular.min.js')
     script(src='/js/jquery.icheck.min.js')
     script(src='/js/placeholders.min.js')
     script(src='/js/respond.min.js')
-    block scripts
+    block scriptsfoot
     script(src='/js/styling.js')
