added project page

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,21 +4,22 @@ block content
     .registration-form-section
         form
             .section-title.reg-header.animated.fadeInDown.row
-                h3 Welcome to the Code Camp 2014 Project Showcase
+                h1.blue.text-center Welcome to the Code Camp 2014 Project Showcase
                 h5 We want Christchurch coders to try new things and push the scene forward. Join one of the exciting projects below or make a new one yourself. 
+                hr
                 .clearfix
-                    a.btn.btn-success.blue-btn.pull-left.small-font.offset-top(href='#')
+                    a.btn.btn-success.blue-btn.pull-left.small-font.offset-top-sm(href='#')
                         i.icon-info
                         &nbsp; &nbsp; I'm going to need some more info buddy
-                    a.btn.btn-success.blue-btn.pull-right.small-font.offset-top(href='#')
+                    a.btn.btn-success.blue-btn.pull-right.small-font.offset-top-sm(href='#')
                         |Show me the prizes! &nbsp; 
                         i.icon-trophy
                 hr
                 .offset-top.clearfix
                     p.pull-left
                         i.icon-chevron-down
-                        &nbsp; &nbsp; Take a look at some of the projects 
-                    a.btn.btn-success.pull-right.green-btn(href='#')
+                        &nbsp; &nbsp; Take a look at some of the projects below
+                    a.btn.btn-success.pull-right.green-btn(href='/newproject')
                         |Or add your project &nbsp; 
                         i.icon-github
             div(ng-controller="SidecaseCtrl")
