--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,8 @@
 doctype html
 html(ng-app)
-  head   
+  head
+    title
+        |Code Camp 2014 Sidecase
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/forms.css')
     script(src='/js/modernizr.js')
