things are saving and ajaxing

--- a/views/newproject.jade
+++ b/views/newproject.jade
@@ -13,7 +13,7 @@ block content
                             .input-group
                                 span.input-group-addon
                                     i.icon-github-alt.icon-color
-                                input.form-control(placeholder='Github project url', type='url', name='project')                        
+                                input.form-control(placeholder='Github project url', type='url', name='url')                        
                         .textbox-wrap
                             .input-group
                                 span.input-group-addon 
