--- a/views/about.jade
+++ b/views/about.jade
@@ -8,10 +8,24 @@ block content
                 h5 
                 hr
                 .clearfix
-                p some text here
+                p In short, this event is focused on building a strong community among the developers of New Zealand. The three main goals of the showcase are to
+                ul
+                    li Get developers from different companies interacting with each other
+                    li Strengthen developers skills by encouraging a learning atmosphere and use of unfamiliar technologies
+                    li Highlight the fun aspects of programming
                 hr
-                p some more text here
+                p We strongly encourage everyone to either join or start a project that is different. After the workshop stream at Code Camp 2014 (June 14th) each team will be given a short amount of time to present their project and discuss what they learnt. 
+                p Prizes will be given out for various acomplishments ranging from 'Most innovative use of new technology' to the 'Wow I cannot believe you managed to do that prize for stepping out of your comfort zone' (we might shorten that one).
                 hr
+                p Rules
+                ul
+                    li Projects have to have been started after March 20th (no presenting something you've been working on for years)
+                    li Projects need to be on github (we use the api for a bunch of stuff)
+                hr
+                p If you have any questions, complaints, comments, etc, contact Jacob at jladuval@gmail.com. You can also find him on 
+                    a(href='https://github.com/jladuval') github here
+                    | &nbsp; and 
+                    a(href='https://twitter.com/JacobDuval') twitter here
                 .clearfix
                 a.btn.btn-success.pull-left.blue-btn(href='/')
                     i.icon-chevron-left 
