--- a/views/index.jade
+++ b/views/index.jade
@@ -35,7 +35,7 @@ block content
                         p {{project.mainlang}}
                         p {{project.description}}
                         span(ng-hide='project.collaborators.length < 1 || !project.teamsize || project.collaborators.length >= project.teamsize') {{project.collaborators.length}} / {{project.teamsize}} team members &nbsp; &nbsp; 
-                        span(ng-hide='project.collaborators.length >= project.teamsize')
+                        span(ng-hide='project.teamsize && project.collaborators.length >= project.teamsize')
                             a(href='mailto:{{project.email}}') join this team
 block scriptshead
   script(src='/js/home.js')
