--- a/views/about.jade
+++ b/views/about.jade
@@ -22,12 +22,13 @@ block content
                     li Projects have to have been started after March 20th (no presenting something you've been working on for years)
                     li Projects need to be on github (we use the api for a bunch of stuff)
                 hr
-                p If you have any questions, complaints, comments, etc, contact Jacob at 
+                p If you have any questions, complaints, comments, death threats, etc, contact Jacob at 
                     a(href='mailto:jladuval@gmail.com') jladuval@gmail.com. 
                     | You can also find him on 
                     a(href='https://github.com/jladuval') github here
                     | &nbsp; and 
                     a(href='https://twitter.com/JacobDuval') twitter here
+                hr
                 .clearfix
                 a.btn.btn-success.pull-left.blue-btn(href='/')
                     i.icon-chevron-left 
