--- a/views/prizes.jade
+++ b/views/prizes.jade
@@ -8,9 +8,16 @@ block content
                 h5 Because learning new things just isn't quite enough for some of you.
                 hr
                 .clearfix
-                p some text here
+                h5 Most innovative use of new technology
+                p Given to a team that has used new technology in a unique way
                 hr
-                p some more text here
+                h5 Wow I cannot believe you managed to do that prize for stepping out of your comfort zone
+                p Given to a team who has tried something completely crazy 
+                hr
+                h5 Most popular
+                p Decided by a straw poll on the night
+                hr
+                h4 More to come!
                 hr
                 a.btn.btn-success.pull-left.blue-btn(href='/')
                     i.icon-chevron-left 
