added meta tags, cleaned things up a bit

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,10 @@ doctype html
 html(ng-app)
   head
     title
-        |Code Camp 2014 Sidecase
+        |Code Camp 2014 Project Showcase
+    meta(name="keywords" content="code camp, programming, christchurch, software, competition")
+    meta(name="description" content="The Code Camp 2014 project showcase event")
+    meta(name="author" content="Jacob Duval")
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/forms.css')
     script(src='/js/modernizr.js')
