--- a/views/about.jade
+++ b/views/about.jade
@@ -32,4 +32,4 @@ block content
                 .clearfix
                 a.btn.btn-success.pull-left.blue-btn(href='/')
                     i.icon-chevron-left 
-                    &nbsp; &nbsp; Back
+                    |&nbsp; &nbsp; Back
