--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,6 +19,7 @@ html(ng-app)
   body.colorBg
     .container.eternity-form
       block content
+    .clearfix
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/js/base64.js')
     script(src='/js/underscore.js')
