--- a/views/prizes.jade
+++ b/views/prizes.jade
@@ -11,7 +11,7 @@ block content
                 h5 Most innovative use of new technology
                 p Given to a team that has used new technology in a unique way
                 hr
-                h5 Wow I cannot believe you managed to do that prize for stepping out of your comfort zone
+                h5 'Wow I cannot believe you managed to do that' prize for stepping out of your comfort zone
                 p Given to a team who has tried something completely crazy 
                 hr
                 h5 Most popular
